# mcp-tool-registry

./: .gitignore  MIGRATION_EXAMPLE.md  README.md  SECURITY.md  alembic.ini  pyproject.toml  requirements.txt  run_dev.py
examples/: basic_usage.py
migrations/: env.py
migrations/versions/: 2025_09_25_1540_create_tools_table.py  2025_09_25_1556_add_authentication_and_authorization_.py
scripts/: setup_security.py
src/mcp_tool_registry/: __init__.py  admin.py  api.py  auth.py  auth_endpoints.py  cli.py  database.py  models.py  security.py  services.py
tests/: __init__.py  test_api.py  test_services.py
